Add yamlRestTests  (#60)
* Add yaml test to CI

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>

* Fix Typo

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>

* Refactoring to move dummy provider to a separate class

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>

* Add comment for index deletion hook

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>

* Add override to use our crypto engine implementation

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>

---------

Signed-off-by: Rajat Gupta <gptrajat@amazon.com>
Co-authored-by: Rajat Gupta <gptrajat@amazon.com>